[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytincture"
version = "0.9.16"
description = "UI Builder"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "schapman1974@gmail.com" }
]
dependencies = [
    "aiofiles==24.1.0",
    "fastapi==0.118.0",
    "fastmcp==2.10.5",
    "upstash-redis>=1.2.0",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "uvicorn==0.37.0",
    "wheel==0.45.1",
    "js==1.0",
    "pyodide-py==0.28.0",
    "authlib==1.6.5",
    "python-dotenv==1.1.1",
    "aioredis==2.0.1",
    "pytest==8.4.2",
    "nest-asyncio==1.6.0"
]

[project.urls]
Homepage = "https://github.com/pytincture/pytincture"

[tool.setuptools.packages]
find = {}
