[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytincture"
version = "0.9.27"
description = "UI Builder"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "schapman1974@gmail.com" }
]
dependencies = [
    "aiofiles==25.1.0",
    "fastapi==0.128.0",
    "fastmcp==2.13.0.1",
    "upstash-redis>=1.2.0",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "uvicorn==0.40.0",
    "wheel==0.45.1",
    "js==1.0",
    "pyodide-py==0.29.1",
    "authlib==1.6.6",
    "python-dotenv==1.1.1",
    "aioredis==2.0.1",
    "pytest==8.4.2",
    "nest-asyncio==1.6.0",
    "python3-saml==1.16.0",
    "markupsafe==3.0.3",
    "itsdangerous==2.2.0",
    "python-multipart==0.0.20",
    "xmlsec>=1.3.17",
]

[project.urls]
Homepage = "https://github.com/pytincture/pytincture"

[tool.setuptools.packages]
find = {}
